# BreadShopPro

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  enums.h  ganiInformation.cpp  ganiInformation.h  ganiParser.cpp  ganiParser.h  main.cpp  save.cpp  save.h  utils.cpp  utils.h
dependencies/SDL2/: SDL_config.h
dependencies/protobuf/lib/: CMakeLists.txt
dependencies/protobuf/lib/cmake/protobuf/: protobuf-config-version.cmake  protobuf-targets-noconfig.cmake  protobuf-targets.cmake
dependencies/protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
dependencies/zlib/share/pkgconfig/: zlib.pc
google/protobuf/: port_def.inc  port_undef.inc
include/: archetype.h  assembler.h  constants.h  enums.h  fileManagement.h  ganiEntity.h  ganiInformation.h  ganiParser.h  ganiToBS.h  ganiToServerBSP.h  initKeyBinds.h  initRender.h  input.h  keyActions.h  killRender.h  loopRender.h  mouseActions.h  mouseInput.h  open.h  parse.h  parsing.h  pbRender.h  pollEvents.h  renderables.h  rendering.h  save.h  saving.h  serverBSPParser.h  stringUtils.h  system.h  test.pb.h  updateSquare.h  utils.h
include/components/: basics.h  customize.h  entityGroupComponent.h  fileManagementComponent.h  gameObject.h  ganiInformation.h  renderComponent.h
src/: ganiParser.cpp  main.cpp  open.cpp  parse.cpp  pollEvents.cpp  save.cpp  utils.cpp
src/assets/: yay.gani
src/components/: ganiInformation.h
src/ecs/archetype/: customizationEntity.cpp  ganiInformationEntity.cpp  spriteDefEntity.cpp
src/ecs/createentities/: customizationEntity.cpp  fileManagement.cpp  ganiEntity.cpp  ganiPart.cpp
src/ecs/system/: fileManagementSystem.cpp
src/ecs/systems/: fileManagementSystem.cpp
src/input/: initInput.cpp  initKeyBinds.cpp  keyActions.cpp  mouseActions.cpp  mouseInput.cpp  pollEvents.cpp  updateSquare.cpp
src/parse/: ganiParser.cpp
src/parsing/: ganiParser.cpp  serverBSPParser.cpp
src/pbrender/: renderables.cpp
src/proto/: gani_building.pb.cc  gani_building.pb.h  gani_building.proto  gani_information.proto  test.pb.cc  test.proto  test3.proto
src/rendering/: initRender.cpp  killRender.cpp  loopRender.cpp
src/save/: ganiToBS.cpp  ganiToServerBSP.cpp
src/saving/: ganiToBS.cpp  ganiToServerBSP copy.cpp  ganiToServerBSP.cpp  ganiToServerBSPprototype.cpp
src/utils/: stringUtils.cpp
